# rust-harfbuzz

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile.in  README.md  appveyor.yml  build.rs  clippy.toml  configure  gen.py  harfbuzz.rc  harfbuzz.rs  hb-version.h  linkhack.rs  makefile.cargo  symbols.txt
.github/workflows/: main.yml
ft_example/: Cargo.toml
ft_example/src/: main.rs
harfbuzz/: Cargo.toml  ChangeLog  Makefile.in  README.md  config.h.in  configure
harfbuzz-sys/: Cargo.toml  README.md  build.rs  makefile.cargo  makefile.touch  touch.sh  update.sh
harfbuzz-sys-test/: Cargo.toml  build.rs
harfbuzz-sys-test/src/: main.rs
harfbuzz-sys/harfbuzz/: CMakeLists.txt  ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
harfbuzz-sys/harfbuzz/docs/: Makefile.in  harfbuzz-docs.xml  harfbuzz-sections.txt  harfbuzz.types
harfbuzz-sys/harfbuzz/docs/html/: a-clustering-example-for-levels-0-and-1.html  aat-shaping.html  adding-text-to-the-buffer.html  annotation-glossary.html  api-index-0-9-10.html  api-index-0-9-11.html  api-index-0-9-2.html  api-index-0-9-20.html  api-index-0-9-22.html  api-index-0-9-28.html  api-index-0-9-30.html  api-index-0-9-31.html  api-index-0-9-38.html  api-index-0-9-39.html  api-index-0-9-41.html  api-index-0-9-42.html  api-index-0-9-5.html  api-index-0-9-7.html  api-index-0-9-8.html  api-index-1-0-5.html  api-index-1-1-2.html  api-index-1-1-3.html  api-index-1-2-3.html  api-index-1-3-3.html  api-index-1-4-0.html  api-index-1-4-2.html  api-index-1-4-3.html  api-index-1-5-0.html  api-index-1-6-0.html  api-index-1-7-5.html  api-index-1-7-7.html  api-index-1-8-0.html  api-index-1-8-1.html  api-index-1-8-5.html  api-index-1-8-6.html  api-index-1-9-0.html  api-index-2-0-0.html  api-index-2-1-0.html  api-index-2-2-0.html  api-index-2-3-0.html  (+91 more)
harfbuzz-sys/harfbuzz/src/: Makefile.in
harfbuzz-sys/harfbuzz/src/hb-ucdn/: Makefile.in
harfbuzz-sys/harfbuzz/subprojects/benchmark-1.5.2/: LICENSE.build  meson.build
harfbuzz-sys/harfbuzz/test/: Makefile.in
harfbuzz-sys/harfbuzz/test/api/: Makefile.in
harfbuzz-sys/harfbuzz/test/api/fonts/: MathTestFontFull.ttx  cv01.ttx
harfbuzz-sys/harfbuzz/test/fuzzing/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/data/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/data/aots/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/data/in-house/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/data/text-rendering-tests/: Makefile.in
harfbuzz-sys/harfbuzz/test/shaping/data/text-rendering-tests/fonts/: TestGVARNine.ttx  TestMORXFourtyone.ttx
harfbuzz-sys/harfbuzz/test/shaping/texts/in-house/shaper-indic/script-gujarati/: x
harfbuzz-sys/harfbuzz/test/shaping/texts/in-house/shaper-indic/script-kannada/: x
harfbuzz-sys/harfbuzz/test/shaping/texts/in-house/shaper-indic/script-malayalam/: x
harfbuzz-sys/harfbuzz/test/shaping/texts/in-house/shaper-indic/script-oriya/: x
harfbuzz-sys/harfbuzz/test/shaping/texts/in-house/shaper-indic/script-telugu/: x
harfbuzz-sys/harfbuzz/test/subset/: Makefile.in
harfbuzz-sys/harfbuzz/test/subset/data/: Makefile.in
harfbuzz-sys/harfbuzz/util/: Makefile.in
harfbuzz-sys/harfbuzz/win32/: config.h.win32
harfbuzz-sys/src/: bindings.rs  coretext.rs  directwrite.rs  freetype.rs  hb_ft.rs  lib.rs
harfbuzz-traits/: Cargo.toml  README.md
harfbuzz-traits/src/: lib.rs
harfbuzz/docs/html/: api-index-full.html  harfbuzz-hb-coretext.html  harfbuzz-hb-gobject.html  harfbuzz-hb-icu.html  harfbuzz-hb-ot-tag.html  harfbuzz-hb-ot.html  index.html  object-tree.html
harfbuzz/src/: Makefile.in  blob.rs  buffer.rs  direction.rs  feature.rs  font.rs  glyph.rs  hb-mutex-private.hh  hb-object-private.hh  hb-ot-shape-complex-indic-machine.hh  hb-unicode-private.hh  language.rs  lib.rs  traits.rs  unicode_funcs.rs
harfbuzz/src/hb-old/: Makefile.in
harfbuzz/test/: Makefile.in
harfbuzz/test/api/: Makefile.in
harfbuzz/test/shaping/: Makefile.in
harfbuzz/util/: Makefile.in
src/: lib.rs  linkhack.rs
