[package]

name = "harfbuzz"
version = "0.1.2"
authors = ["The Servo Project Developers"]
license = "Apache-2.0 / MIT"
repository = "https://github.com/servo/rust-harfbuzz"
description = "Bindings to the Harfbuzz text shaping engine"
documentation = "http://doc.servo.org/harfbuzz/"

build = "build.rs"
links = "harfbuzz"

[dependencies]
libc = "0.1.8"
