[package]
name = "harfbuzz-sys-test"
version = "0.1.0"
authors = ["Sean Leather <sean.leather@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
harfbuzz-sys = { path = "../harfbuzz-sys" }
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
ctest2 = "0.4"

[features]
build-native-harfbuzz = [ "harfbuzz-sys/build-native-harfbuzz" ]
