[package]
name = "harfbuzz-sys"
version = "0.5.0"
edition = "2018"

authors = ["The Servo Project Developers"]
license = "MIT"
readme = "README.md"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz-sys/"
keywords = ["opentype", "font", "text", "layout", "unicode", "shaping"]
categories = ["external-ffi-bindings", "internationalization", "text-processing"]

exclude = [
    "harfbuzz/docs/*",
    "harfbuzz/subprojects/benchmark-1.5.2/*",
    "harfbuzz/test/*",
    "update.sh",
]

links = "harfbuzz"
build = "build.rs"

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
cc = { version = "1", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
core-graphics = "0.22"
core-text = "19"
foreign-types = "0.3"

[target.'cfg(target_family = "windows")'.dependencies.winapi]
version = "0.3"
features = ["dwrite"]

[target.'cfg(any(target_os = "android", all(unix, not(target_vendor = "apple"))))'.dependencies]
freetype = { version = "0.7", default-features = false }

[dependencies.freetype]
version = "0.7"
default-features = false
optional = true

[features]
default = ["build-native-harfbuzz", "build-native-freetype"]
build-native-harfbuzz = ["cc", "pkg-config"]
build-native-freetype = ["freetype", "freetype/freetype-sys"]
