[package]
name = "harfbuzz-sys"
version = "0.6.0"
edition = "2021"

authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz-sys/"
keywords = ["opentype", "font", "text", "unicode", "shaping"]
categories = ["external-ffi-bindings", "internationalization", "text-processing"]

exclude = [
    "harfbuzz/docs/*",
    "harfbuzz/subprojects/benchmark-1.5.2/*",
    "harfbuzz/test/*",
    "update.sh",
]

links = "harfbuzz"
build = "build.rs"

[build-dependencies]
pkg-config = { version = "0.3" }
cc = { version = "1" }

[target.'cfg(target_vendor = "apple")'.dependencies]
core-graphics = { version = "0.23", optional = true }
core-text = { version = "20", optional = true }
foreign-types = { version = "0.5", optional = true }

[target.'cfg(target_family = "windows")'.dependencies.winapi]
version = "0.3"
optional = true
features = ["dwrite"]

[dependencies.freetype-sys]
version = "0.20.1"
optional = true

[features]
default = ["coretext", "directwrite", "freetype"]
bundled = []
coretext = ["core-graphics", "core-text", "foreign-types"]
directwrite = ["winapi"]
freetype = ["freetype-sys"]
