[package]
name = "harfbuzz-sys"
version = "0.6.1"
readme = "README.md"
categories = ["external-ffi-bindings", "internationalization", "text-processing"]
description = "Rust bindings to the HarfBuzz text shaping engine"

authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

exclude = [
    "harfbuzz/docs/*",
    "harfbuzz/subprojects/benchmark-1.5.2/*",
    "harfbuzz/test/*",
    "update.sh",
]

links = "harfbuzz"
build = "build.rs"

[build-dependencies]
pkg-config = { version = "0.3" }
cc = { version = "1" }

[target.'cfg(target_vendor = "apple")'.dependencies]
core-graphics = { version = "0.23", optional = true }
core-text = { version = "20", optional = true }
foreign-types = { version = "0.5", optional = true }

[target.'cfg(target_family = "windows")'.dependencies.windows]
version = "0.58"
optional = true
features = ["Win32_Graphics_DirectWrite"]

[dependencies.freetype-sys]
version = "0.21.0"
optional = true

[features]
default = ["coretext", "directwrite", "freetype"]
bundled = []
coretext = ["dep:core-graphics", "dep:core-text", "dep:foreign-types"]
directwrite = ["dep:windows"]
freetype = ["dep:freetype-sys"]
