[package]
name = "harfbuzz-traits"
version = "0.6.0"
description = "Rust traits for the HarfBuzz text shaping engine bindings"

authors = { workspace = true }
categories = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
