[package]
name = "harfbuzz"
version = "0.4.0"
edition = "2018"

authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz/"
keywords = ["opentype", "font", "text", "layout", "unicode", "shaping"]
categories = ["text-processing"]

[dependencies.harfbuzz-sys]
path = "../harfbuzz-sys"
version = "0.5.0"
default-features = false

[features]
default = ["build-native-harfbuzz", "directwrite", "freetype"]
build-native-harfbuzz = ["harfbuzz-sys/build-native-harfbuzz"]
directwrite = ["harfbuzz-sys/directwrite"]
freetype = ["harfbuzz-sys/freetype"]
