[package]
name = "harfbuzz"
version = "0.6.0"
edition = "2021"

authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz/"
keywords = ["opentype", "font", "text", "layout", "unicode", "shaping"]
categories = ["text-processing"]

[dependencies.harfbuzz-sys]
path = "../harfbuzz-sys"
version = "0.6.0"
default-features = false

[dependencies.harfbuzz-traits]
path = "../harfbuzz-traits"
version = "0.6.0"
default-features = false

[features]
default = ["coretext", "directwrite", "freetype", "std"]
bundled = ["harfbuzz-sys/bundled"]
coretext = ["harfbuzz-sys/coretext"]
directwrite = ["harfbuzz-sys/directwrite"]
freetype = ["harfbuzz-sys/freetype"]
std = []
